feat: adiciona interpretador de respostas do server no cliente